--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -876,7 +876,7 @@
         // 退出登录
         window.logout = async function() {
             await supabase.auth.signOut();
-            window.location.href = 'admin-unified.html';
+            window.location.href = '/'';
         };
 
         // 初始化
