--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -614,7 +614,7 @@
         async function checkAuth() {
             const { data: { session } } = await supabase.auth.getSession();
             if (!session) {
-                window.location.href = 'admin-unified.html';
+                window.location.href = '/';
                 return;
             }
             
@@ -876,7 +876,7 @@
         // 退出登录
         window.logout = async function() {
             await supabase.auth.signOut();
-            window.location.href = '/'';
+            window.location.href = '/';
         };
 
         // 初始化
