--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -1006,7 +1006,7 @@
         async function checkAuth() {
             const { data: { session } } = await supabase.auth.getSession();
             if (!session) {
-                window.location.href = '/admin-login.html';
+                window.location.href = '/';
                 return;
             }
             
