20260112admin-simple.html04

--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -895,9 +895,9 @@
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
 
         // 修改：使用正确的Supabase配置
-        const SUPABASE_URL = 'https://dthgkfxlzyqscxnrtfke.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR0aGdrZnhsenlxc2N4bnJ0ZmtlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzY3MzQyMTksImV4cCI6MjA1MjMxMDIxOX0.MlFhkdAuPrjhkWz5RWUq_4z-TvETtKaIp9ZWcvHqq30';
-        
+        const SUPABASE_URL = 'https://hrnedqrnzqseuuxmegsb.supabase.co';
+const SUPABASE_ANON_KEY = '...ref":"hrnedqrnzqseuuxmegsb"...';
+
         const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
         window.supabase = supabase;
 
