--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -896,7 +896,7 @@
 
         // 修改：使用正确的Supabase配置
         const SUPABASE_URL = 'https://hrnedqrnzqseuuxmegsb.supabase.co';
-const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhybmVkcXJuenFzZXV1eG1lZ3NiIiwicm9sZSI6ImFub24iLCJpYXQiOj...';
+const SUPABASE_ANON_KEY = 'sb_publishable_3_j109YmeDowhqaIda2HLQ_PuzH6mio';
 
 
         const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
