--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -1206,6 +1206,7 @@ const SUPABASE_ANON_KEY = 'sb_publishable_3_j109YmeDowhqaIda2HLQ_PuzH6mio';
 
             try {
                 const newsData = {
+                    tenant_slug: 'uscgcc',
                     title: title,
                     publish_date: date,
                     content: content,
