--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -1210,7 +1210,7 @@ const SUPABASE_ANON_KEY = 'sb_publishable_3_j109YmeDowhqaIda2HLQ_PuzH6mio';
                     title: title,
                     publish_date: date,
                     content: content,
-                    status: 'pending',
+                    status: 'draft',
                     in_knowledge_base: false
                 };
 
