--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -896,7 +896,7 @@
 
         // 修改：使用正确的Supabase配置
         const SUPABASE_URL = 'https://hrnedqrnzqseuuxmegsb.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhybmVkcXJuenFzZXV1eG1lZ3NiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzY4NDc5NzgsImV4cCI6MjA1MjQyMzk3OH0.xvlk4y_xDK5UhRo2JUv0QEXD1fFD-f_NsFwfz5TRN0Y';  // ❌ 这个Key是错的！
+        const SUPABASE_ANON_KEY = 'sb_publishable_3_j109YmeDowhqaIda2HLQ_PuzH6mio';  
 
 
         const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
