--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -799,6 +799,177 @@
             font-weight: 700;
             margin-left: 10px;
         }
+        /* ========================= */
+/* ✅ 新增：后台左侧菜单布局  */
+/* ========================= */
+.admin-layout {
+  display: grid;
+  grid-template-columns: 260px 1fr;
+  gap: 20px;
+}
+
+.sidebar {
+  background: white;
+  border-radius: 15px;
+  padding: 16px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  height: calc(100vh - 140px);
+  position: sticky;
+  top: 20px;
+  overflow-y: auto;
+}
+
+.sidebar .sb-title {
+  font-size: 14px;
+  font-weight: 800;
+  color: #111827;
+  margin: 8px 10px 12px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.sb-group {
+  margin-bottom: 14px;
+}
+
+.sb-item {
+  width: 100%;
+  text-align: left;
+  border: none;
+  background: transparent;
+  padding: 10px 12px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 650;
+  color: #374151;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  transition: all .2s;
+}
+
+.sb-item:hover {
+  background: #f3f4f6;
+}
+
+.sb-item.active {
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  color: white;
+}
+
+.sb-item.disabled {
+  opacity: .55;
+  cursor: not-allowed;
+}
+
+.sb-item .left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.soon-tag {
+  font-size: 12px;
+  font-weight: 800;
+  padding: 2px 8px;
+  border-radius: 999px;
+  background: #111827;
+  color: white;
+}
+
+.main-area {
+  min-width: 0;
+}
+
+.section {
+  display: none;
+}
+
+.section.active {
+  display: block;
+}
+
+.coming-soon-box {
+  background: white;
+  border-radius: 15px;
+  padding: 30px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+
+.coming-soon-box h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #111827;
+}
+
+.coming-soon-box p {
+  color: #6b7280;
+  line-height: 1.7;
+}
+
+.wallet-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 16px;
+  margin-bottom: 18px;
+}
+
+.wallet-card {
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  color: white;
+  border-radius: 14px;
+  padding: 18px;
+}
+
+.wallet-card .k {
+  font-size: 12px;
+  opacity: .9;
+  margin-bottom: 6px;
+}
+
+.wallet-card .v {
+  font-size: 28px;
+  font-weight: 900;
+}
+
+.wallet-actions {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin: 14px 0 8px;
+}
+
+.wallet-actions .bulk-btn {
+  width: auto;
+}
+
+.tx-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.tx-table th, .tx-table td {
+  border-bottom: 1px solid #eee;
+  padding: 10px 8px;
+  font-size: 13px;
+  color: #374151;
+}
+
+.tx-table th {
+  color: #111827;
+  font-weight: 800;
+  text-align: left;
+}
+
+@media (max-width: 960px) {
+  .admin-layout { grid-template-columns: 1fr; }
+  .sidebar { height: auto; position: relative; top: 0; }
+}
+
     </style>
 </head>
 <body>
@@ -816,8 +987,78 @@
             <button class="logout-btn" onclick="logout()">退出</button>
         </div>
     </div>
+    <div class="admin-layout">
+  <!-- 左侧菜单 -->
+  <aside class="sidebar">
+    <div class="sb-title">🧭 管理菜单</div>
 
-    <div class="tabs">
+    <div class="sb-group">
+      <button class="sb-item active" data-section="dashboard" onclick="switchSection('dashboard')">
+        <span class="left">🏠 概览</span>
+      </button>
+      <button class="sb-item" data-section="content" onclick="switchSection('content')">
+        <span class="left">📚 AI内容与训练</span>
+      </button>
+      <button class="sb-item" data-section="wallet" onclick="switchSection('wallet')">
+        <span class="left">💳 钱包与订阅</span>
+      </button>
+    </div>
+
+    <div class="sb-title">🚧 规划中</div>
+    <div class="sb-group">
+      <button class="sb-item disabled" onclick="openComingSoon('组织与成员')">
+        <span class="left">👥 组织与成员</span><span class="soon-tag">Soon</span>
+      </button>
+      <button class="sb-item disabled" onclick="openComingSoon('沟通中心')">
+        <span class="left">💬 沟通中心</span><span class="soon-tag">Soon</span>
+      </button>
+      <button class="sb-item disabled" onclick="openComingSoon('安全与审计')">
+        <span class="left">🛡️ 安全与审计</span><span class="soon-tag">Soon</span>
+      </button>
+      <button class="sb-item" onclick="openTrashModal()">
+        <span class="left">🗑️ 垃圾箱</span>
+      </button>
+    </div>
+  </aside>
+
+  <!-- 右侧内容区 -->
+  <main class="main-area">
+    <!-- 1）概览 -->
+    <section id="section-dashboard" class="section active">
+      <div class="content-section">
+        <div class="form-section">
+          <h2>🏠 概览</h2>
+          <div class="wallet-grid">
+            <div class="wallet-card">
+              <div class="k">钱包余额</div>
+              <div class="v" id="dashBalance">$0.00</div>
+            </div>
+            <div class="wallet-card">
+              <div class="k">订阅状态</div>
+              <div class="v" id="dashStatus">Active</div>
+            </div>
+            <div class="wallet-card">
+              <div class="k">下次扣费日</div>
+              <div class="v" id="dashNextBill">—</div>
+            </div>
+          </div>
+
+          <div class="wallet-actions">
+            <button class="bulk-btn publish-btn" onclick="switchSection('wallet')">去充值</button>
+            <button class="bulk-btn select-all" onclick="switchSection('content')">管理内容</button>
+          </div>
+
+          <div style="margin-top:10px;color:#6b7280;font-size:13px;">
+            说明：今晚优先上线“钱包与订阅”，其他模块先显示名称，后续逐步开放。
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 2）AI内容与训练（把你原来的 .tabs 整块放进来） -->
+    <section id="section-content" class="section">
+      <!-- ✅ 这里粘贴你原来的 <div class="tabs"> ... </div> 整块内容（原封不动） -->
+       <div class="tabs">
         <div class="tab-buttons">
             <button class="tab-btn active" onclick="switchTab('knowledge')" data-tab="knowledge">
                 📚 知识库管理
@@ -1060,6 +1301,56 @@
             </div>
         </div>
     </div>
+
+    </section>
+
+    <!-- 3）钱包与订阅（先做本地钱包，后面再接Stripe/Supabase） -->
+    <section id="section-wallet" class="section">
+      <div class="content-section">
+        <div class="form-section">
+          <h2>💳 钱包与订阅</h2>
+
+          <div class="wallet-grid">
+            <div class="wallet-card">
+              <div class="k">钱包余额</div>
+              <div class="v" id="walletBalance">$0.00</div>
+            </div>
+            <div class="wallet-card">
+              <div class="k">月费</div>
+              <div class="v" id="walletMonthlyFee">$10.00</div>
+            </div>
+            <div class="wallet-card">
+              <div class="k">扣费日（锚点）</div>
+              <div class="v" id="walletAnchorDay">—</div>
+            </div>
+          </div>
+
+          <div class="wallet-actions">
+            <button class="bulk-btn publish-btn" onclick="openRechargeModal()">➕ 充值</button>
+            <button class="bulk-btn bulk-reject" onclick="simulateMonthlyDeduct()">模拟扣月费</button>
+            <button class="bulk-btn select-all" onclick="resetWallet()">重置钱包(测试)</button>
+          </div>
+
+          <div class="items-list">
+            <h3>📒 钱包流水</h3>
+            <div id="txWrap"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 统一“开发中”占位 -->
+    <section id="section-soon" class="section">
+      <div class="coming-soon-box">
+        <h2 id="soonTitle">开发中</h2>
+        <p>
+          该功能模块已在菜单中预留，后续将逐步开放。你今晚先把“钱包与订阅”跑通即可。
+        </p>
+      </div>
+    </section>
+  </main>
+</div>
+
 
     <script type="module">
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
@@ -1475,6 +1766,166 @@
                 console.error('加载垃圾箱失败:', e);
             }
         }
+        // =========================
+// ✅ 新增：Section 切换（概览 / 内容 / 钱包 / 占位）
+// =========================
+window.switchSection = function(section) {
+  // 切换右侧 section
+  document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+  const target = document.getElementById('section-' + section);
+  if (target) target.classList.add('active');
+
+  // 高亮左侧菜单
+  document.querySelectorAll('.sb-item').forEach(btn => btn.classList.remove('active'));
+  const activeBtn = document.querySelector(`.sb-item[data-section="${section}"]`);
+  if (activeBtn) activeBtn.classList.add('active');
+};
+
+window.openComingSoon = function(name) {
+  document.getElementById('soonTitle').textContent = `🚧 ${name}（开发中）`;
+  window.switchSection('soon');
+};
+
+// =========================
+// ✅ 新增：钱包（先用 localStorage 跑通，后续接 Stripe/Supabase）
+// =========================
+const WALLET_KEY = 'wallet_uscgcc_v1';
+
+function loadWalletLocal() {
+  const raw = localStorage.getItem(WALLET_KEY);
+  if (raw) return JSON.parse(raw);
+  // 默认钱包
+  return {
+    balance: 0,
+    monthlyFee: 10,
+    anchorDay: null, // 第一次扣费日期（例如 18）
+    status: 'active',
+    tx: [] // {type, amount, at, note}
+  };
+}
+
+function saveWalletLocal(w) {
+  localStorage.setItem(WALLET_KEY, JSON.stringify(w));
+}
+
+function fmtMoney(n) {
+  const v = Number(n || 0);
+  return `$${v.toFixed(2)}`;
+}
+
+function renderWallet() {
+  const w = loadWalletLocal();
+
+  // wallet page
+  const elBalance = document.getElementById('walletBalance');
+  const elFee = document.getElementById('walletMonthlyFee');
+  const elAnchor = document.getElementById('walletAnchorDay');
+  if (elBalance) elBalance.textContent = fmtMoney(w.balance);
+  if (elFee) elFee.textContent = fmtMoney(w.monthlyFee);
+  if (elAnchor) elAnchor.textContent = w.anchorDay ? `每月 ${w.anchorDay} 日` : '未设置';
+
+  // dashboard cards
+  const dBal = document.getElementById('dashBalance');
+  const dStatus = document.getElementById('dashStatus');
+  const dNext = document.getElementById('dashNextBill');
+  if (dBal) dBal.textContent = fmtMoney(w.balance);
+  if (dStatus) dStatus.textContent = (w.status || 'active').toUpperCase();
+  if (dNext) dNext.textContent = w.anchorDay ? `每月 ${w.anchorDay} 日` : '—';
+
+  // tx table
+  const wrap = document.getElementById('txWrap');
+  if (!wrap) return;
+  const tx = w.tx || [];
+  if (tx.length === 0) {
+    wrap.innerHTML = `<div class="empty-state"><div class="empty-state-icon">🧾</div><p>暂无流水（先用充值产生记录）</p></div>`;
+    return;
+  }
+
+  wrap.innerHTML = `
+    <table class="tx-table">
+      <thead>
+        <tr>
+          <th>时间</th>
+          <th>类型</th>
+          <th>金额</th>
+          <th>说明</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${tx.map(t => `
+          <tr>
+            <td>${new Date(t.at).toLocaleString('zh-CN')}</td>
+            <td>${t.type}</td>
+            <td>${fmtMoney(t.amount)}</td>
+            <td>${t.note || ''}</td>
+          </tr>
+        `).join('')}
+      </tbody>
+    </table>
+  `;
+}
+
+window.openRechargeModal = function() {
+  const amountStr = prompt('请输入充值金额（例如 50）');
+  if (!amountStr) return;
+  const amt = Number(amountStr);
+  if (!Number.isFinite(amt) || amt <= 0) {
+    alert('金额不正确');
+    return;
+  }
+  const w = loadWalletLocal();
+  w.balance = Number(w.balance || 0) + amt;
+  w.tx.unshift({ type: 'recharge', amount: amt, at: Date.now(), note: '测试充值（后续接 Stripe）' });
+
+  // 如果还没有锚点日期，第一次充值后可引导设置（先简单：设为今天日期）
+  if (!w.anchorDay) {
+    const d = new Date();
+    w.anchorDay = d.getDate();
+  }
+
+  // 如果余额足够，恢复 active
+  if (w.balance >= w.monthlyFee) w.status = 'active';
+
+  saveWalletLocal(w);
+  renderWallet();
+  alert('✅ 充值成功（本地测试）');
+};
+
+window.simulateMonthlyDeduct = function() {
+  const w = loadWalletLocal();
+  if (!w.anchorDay) {
+    alert('请先充值一次，生成扣费锚点日');
+    return;
+  }
+  if (w.balance >= w.monthlyFee) {
+    w.balance -= w.monthlyFee;
+    w.tx.unshift({ type: 'monthly_fee', amount: -w.monthlyFee, at: Date.now(), note: '模拟扣月费' });
+    w.status = 'active';
+    saveWalletLocal(w);
+    renderWallet();
+    alert('✅ 已模拟扣除月费');
+  } else {
+    w.status = 'suspended';
+    saveWalletLocal(w);
+    renderWallet();
+    alert('❌ 余额不足：已标记为暂停（suspended）');
+  }
+};
+
+window.resetWallet = function() {
+  if (!confirm('确定要重置本地钱包吗？仅测试用。')) return;
+  localStorage.removeItem(WALLET_KEY);
+  renderWallet();
+  alert('✅ 已重置');
+};
+
+// ✅ 在认证通过后也刷新钱包 UI
+const __oldCheckAuth = checkAuth;
+checkAuth = async function() {
+  await __oldCheckAuth();
+  renderWallet();
+};
+
 
         // 检查认证
         async function checkAuth() {
