20260117admin-simple.html

--- a/public/admin-simple.html
+++ b/public/admin-simple.html
@@ -1005,6 +1005,10 @@
 <body>
     <div class="header">
         <h1>
+            <a href="/" style="margin-right:10px; text-decoration:none;">
+  🏠 回首页
+</a>
+
             <div class="logo">📊</div>
             USCGCC 管理后台
         </h1>
